--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "main": "node build/main.js"
+    "build": "node build.js"
   },
   "author": "Michael Knopf",
   "license": "ISC",
@@ -16,7 +16,8 @@
     "webpack": "^2.4.1"
   },
   "dependencies": {
-    "jQuery": "^1.7.4",
+    "jquery": "^3.2.1",
+    "jsdom": "^9.12.0",
     "lodash": "^4.17.4"
   }
 }
